# Agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: 代码详解.md
ros_packages/sagittarius_sort_pipeline/: CMakeLists.txt  package.xml  setup.py
ros_packages/sagittarius_sort_pipeline/config/: rosconsole.conf
ros_packages/sagittarius_sort_pipeline/launch/: sort.launch
ros_packages/sagittarius_sort_pipeline/nodes/: sort_main.py
ros_packages/sagittarius_sort_pipeline/src/sagittarius_sort_pipeline/: __init__.py  action_types.py  execution_module.py  perception_module.py  planning_module.py  video_recorder.py
samples/: eval_set.jsonl
samples/requests/: sort_by_color.json  sort_camera_yolo.json  sort_stream_yolo.json
schemas/: AgentTraceStep.schema.json  DryRunReport.schema.json  ExecutionCommand.schema.json  ExecutionRequest.schema.json  HealthResponse.schema.json  ObjectTable.schema.json  PipelineRequest.schema.json  PipelineResponse.schema.json  Plan.schema.json  VisualizationRequest.schema.json
scripts/: export_schemas.py  run_eval.py
src/grasp_agent_middleware/: __init__.py  agent.py  api.py  backends.py  cli.py  config.py  execution.py  langchain_adapter.py  observability.py  orchestration.py  perception.py  planning.py  schemas.py  visualization.py
tests/: test_pipeline_contract.py
