[project]
name = "a-grasp-agent-middleware"
version = "0.1.0"
description = "Execution-ready multimodal agent middleware for robotic sorting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "python-pptx>=1.0.2",
]
vision = [
  "ultralytics>=8.3.0",
  "opencv-python>=4.10.0",
  "numpy>=1.26.0",
]
agent = [
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0",
]

[project.scripts]
grasp-agent = "grasp_agent_middleware.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/grasp_agent_middleware"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
