<?xml version="1.0"?>
<package format="2">
  <name>sagittarius_sort_pipeline</name>
  <version>0.0.1</version>
  <description>Instruction-driven pick-and-place pipeline for the Sagittarius arm.</description>
  <maintainer email="Keswill@users.noreply.github.com">Keswill</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sagittarius_object_color_detector</depend>

  <exec_depend>sagittarius_moveit</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
